--- a/playground/docker/tempest/machine.yaml
+++ b/playground/docker/tempest/machine.yaml
@@ -1,6 +1,8 @@
 image: 'tempest:v1'
 environment: ["VER=v1"]
-command: ['bash', './detect_nodes.sh']
+command: 
+    detect: ['bash', './detect_nodes.sh']
+    stitch: ['bash', './stitch_nodes.sh']
 volumes:
     data:     /work/users/jost/te/data
     tempest: /home/jost/work/docker/tempest
