include healpix example

--- a/config/catalog.yaml
+++ b/config/catalog.yaml
@@ -14,3 +14,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/ICON/main.yaml"
+  HEALPIX:
+    description: Healpix Data
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/HEALPIX/main.yaml"
