--- a/config/retrieve.yaml
+++ b/config/retrieve.yaml
@@ -1,6 +1,6 @@
 regrid:
    weightsdir: /work/bb1153/b382075/nextgems/weights
-   weightsfile: weights_{model}_{method}_{target}.nc
+   weightsfile: weights_{model}_{method}_{regrid}.nc
 
 exp:
    ICON:
