--- a/config/catalog.yaml
+++ b/config/catalog.yaml
@@ -14,3 +14,8 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/ICON/main.yaml"
+  MSWEP:
+    description: MSWEP_V280 precipitation data
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/MSWEP/main.yaml"
