--- a/config/catalog/MSWEP/past.yaml
+++ b/config/catalog/MSWEP/past.yaml
@@ -28,3 +28,17 @@ sources:
       chunks: {}
       xarray_kwargs:
         decode_times: False
+
+  3hourly:
+    description: 3 hourly MSWEP_V280 data
+    driver: netcdf
+    #cache:
+    #  - argkey: urlpath
+    #    regex: ''
+    #    type: file
+    args:
+      urlpath: '/work/bb1153/b382075/datasets/MSWEP_V280/Past/3hourly/*.nc'
+      chunks: {}
+      xarray_kwargs:
+        decode_times: False
+
