--- a/diagnostics/ecmean/config.yml
+++ b/diagnostics/ecmean/config.yml
@@ -13,7 +13,8 @@ dirs:
 global:
   atm_vars: [tas, psl, pr, pme, cll, clm, clh,
              pr_oce, pme_oce, pr_land, pme_land, 
-             net_toa, rsnt, rlnt, rsntcs, rlntcs]
+             net_toa, rsnt, rlnt, rsntcs, rlntcs, swcf, lwcf, 
+             rsns, rlns, hfss, hfls, net_sfc_nosn, net_sfc]
   oce_vars: [tos]
   ice_vars: [siconc_north, siconc_south]
   tab_vars: []
