--- a/config/regrid.yaml
+++ b/config/regrid.yaml
@@ -2,6 +2,11 @@ weights:
    path: /work/bb1153/b382075/nextgems/weights
    template: weights_{model}_{exp}_{source}_{method}_{target}_l{level}.nc
 
+areas:
+   path: /work/bb1153/b382075/nextgems/weights
+   src_template: areas_{model}_{exp}_{source}.nc
+   dst_template: areas_{grid}.nc
+
 paths:
   grids: /work/bb1153/b382075/nextgems/weights
   icon: /pool/data/ICON
