--- a/config/regrid.yaml
+++ b/config/regrid.yaml
@@ -38,6 +38,7 @@ source_grids:
       default: 
         path: /pool/data/ICON/grids/public/mpim/0015/icon_grid_0015_R02B09_G.nc
         extra: "-selname,cell_index" 
+        space_coord: ["cell"]
     hpx:
       default:
         path:
