--- a/diagnostics/ecmean/config.yml
+++ b/diagnostics/ecmean/config.yml
@@ -14,14 +14,15 @@ global:
   atm_vars: [tas, psl, pr, pme, cll, clm, clh,
              pr_oce, pme_oce, pr_land, pme_land, 
              net_toa, rsnt, rlnt, rsntcs, rlntcs, swcf, lwcf, 
-             rsns, rlns, hfss, hfls, net_sfc_nosn, net_sfc]
+             rsns, rlns, hfss, hfls, net_sfc_nosn, net_sfc,
+             toamsfc, toamsfc_nosn]
   oce_vars: [tos]
   ice_vars: [siconc_north, siconc_south]
   tab_vars: []
 
 PI:
   2d_vars:
-    field: [tas, pr, psl, tauu, tauv]
+    field: [net_sfc, tas, psl, pr, tauu, tauv]
   3d_vars:
     field: [ta, ua, va, hus]
   oce_vars:
