--- a/diagnostics/ecmean/config_intake.yml
+++ b/diagnostics/ecmean/config_intake.yml
@@ -11,20 +11,22 @@ dirs:
    fig: /work/bb1153/b382076/ecmean/figures
 
 global:
-  atm_vars: [tas, psl, net_toa]
+  atm_vars: [tas, pr, psl, rsnt, rlnt, net_toa]
   oce_vars: []
   ice_vars: [siconc]
   tab_vars: []
+  regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
+  seasons: ['ALL', 'DJF', 'JJA']
 
 PI:
   2d_vars:
-    field: [tas]
+    field: [tas, pr,  psl]
   3d_vars:
     field: []
   oce_vars:
     field: []
   ice_vars:
-    field: []
+    field: [siconc]
   regions: ['Global', 'North Midlat', 'Tropical', 'South Midlat']
   seasons: ['ALL', 'DJF', 'JJA']
   resolution: r360x180
