--- a/cli/config_lra.yml
+++ b/cli/config_lra.yml
@@ -2,18 +2,23 @@
 target:
   resolution: r100
   frequency: mon
-  outdir: /work/bb1153/b382076/IFS-lowres
+  outdir: /work/bb1153/b382076/LRA
+  tmpdir: /scratch/b/b382076
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
+  IFS:
+    tco2559-ng5:
+      ICMGG_atm2d:
+        vars: ['tsr', 'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
+      ICMU_atm3d:
+        vars: ['v']
+  ICON:
+    ngc2009: 
+      atm_2d_ml_R02B09:
+        vars: ['pr', 'psl', 'rsds', 'rlut', 'rlus', 'tas', 'tauu', 'tauv']
   FESOM:
     tco2559-ng5:
       original_2d:
-        vars: ['sst', 'sss']
-  IFS:
-    tco2559-ng5:
-      ICMU_atm3d:
-        vars: ['v']
-      ICMGG_atm2d:
-        vars: ['hcc', 'lcc', 'mcc', 'nsss', 'ewss', 'e']
+        vars: ['sst']
       
