--- a/config/catalog/ICON/ngc2009.yaml
+++ b/config/catalog/ICON/ngc2009.yaml
@@ -44,10 +44,17 @@ sources:
           simulation_id: ngc2009
           frequency: 30minute
           time_reduction: inst
-  lra_r100:
+  lra-r100-mon:
     driver: netcdf
     args:
       urlpath: '/work/bb1153/b382076/LRA/ngc2009/r100/mon/*.nc'
+      chunks: {}
+      xarray_kwargs:
+        decode_times: True
+  lra-r100-day:
+    driver: netcdf
+    args:
+      urlpath: '/work/bb1153/b382076/LRA/ngc2009/r100/day/*.nc'
       chunks: {}
       xarray_kwargs:
         decode_times: True
