separate fixes per experiment

--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -10,59 +10,65 @@ defaults:
 
 models:
     IFS:
-        deltat: 10800
-        vars:
-            2t: 
-                short_name: tas
-                units: "{temperature}"
-            tp:
-                short_name: pr
-                units: "{mass_flux}"
+        default:
+            deltat: 10800
+            vars:
+                2t: 
+                    short_name: tas
+                    units: "{temperature}"
+                tp:
+                    short_name: pr
+                    units: "{mass_flux}"
 
-        data_model: cf2aqua
+            data_model: cf2aqua
 
     FESOM:
-        vars:
-            temp: 
-                short_name: to
-                src_units: degC
-                units: "{temperature}"
+        default:
+            vars:
+                temp: 
+                    short_name: to
+                    src_units: degC
+                    units: "{temperature}"
 
-        # coords:
-        #     latitude:
-        #         name: "{latitude}"
-        #     longitude:
-        #         name: "{longitude}"
+            # coords:
+            #     latitude:
+            #         name: "{latitude}"
+            #     longitude:
+            #         name: "{longitude}"
 
     MSWEP:
-        vars:
-            precipitation:
-                short_name: pr
-                units: "{mass_flux}"
+        default:
+            vars:
+                precipitation:
+                    short_name: pr
+                    units: "{mass_flux}"
 
-        # coords:
-        #     latitude: 
-        #         name: "{latitude}"
-        #     longitude:
-        #         name: "{longitude}"
+            # coords:
+            #     latitude: 
+            #         name: "{latitude}"
+            #     longitude:
+            #         name: "{longitude}"
 
     ERA5:
-        data_model: era2aqua
-        # coords:
-        #     latitude: 
-        #         name: "{latitude}"
-        #     longitude:
-        #         name: "{longitude}"
+        default:
+            data_model: era2aqua
+            # coords:
+            #     latitude: 
+            #         name: "{latitude}"
+            #     longitude:
+            #         name: "{longitude}"
 
     CERES:
-        derived:
-            mtntrf:
-                formula: 0.-toa_lw_all_daily*1.0060667743
-                attributes:
-                    long_name: Mean top net thermal radiation flux, Observed, All-sky conditions, Daily Means, Energy balanced
-                    standard_name: Observed TOA Longwave Flux - All-sky - Energy balanced
-                    units: W m-2
-                    valid_min: -500
-                    valid_max: 0
-                    positive: down
-                    paramId: 172179
+        syn-toa41:
+            derived:
+                mtntrf:
+                    # the fixer cannot parse * followed by - for now
+                    formula: 0.-toa_lw_all_daily*1.0060667743 
+                    attributes:
+                        long_name: Mean top net thermal radiation flux, Observed, All-sky conditions, Daily Means, Energy balanced
+                        standard_name: Observed TOA Longwave Flux - All-sky - Energy balanced
+                        units: W m-2
+                        valid_min: -500
+                        valid_max: 0
+                        positive: down
+                        paramId: 172179
