--- a/cli/config_lra.yml
+++ b/cli/config_lra.yml
@@ -7,18 +7,23 @@ target:
 
 # all the variable listed here will be processed by the LRA creator
 catalog:
-  IFS:
-    tco2559-ng5:
-      ICMGG_atm2d:
-        vars: ['tsr', 'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
-      ICMU_atm3d:
-        vars: ['v']
   ICON:
-    ngc2009: 
+    ngc2009:
       atm_2d_ml_R02B09:
         vars: ['pr', 'psl', 'rsds', 'rlut', 'rlus', 'tas', 'tauu', 'tauv']
   FESOM:
     tco2559-ng5:
       original_2d:
-        vars: ['sst']
-      
+        vars: ['sst', 'sss']
+  IFS:
+    tco2559-ng5:
+      ICMGG_atm2d:
+        vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
+      ICMU_atm3d:
+        vars: ['u']
+    tco3999-ng5:
+      ICMGG_atm2d:
+        vars: ['2t']
+    tco1279-orca025:
+      ICMGG_atm2d:
+        vars: ['tsr', 'ttr', 'tp', 'e', '2t', 'msl',  'hcc', 'lcc', 'mcc', 'nsss', 'ewss']
