--- a/config/catalog/IFS/tco1279-orca025.yaml
+++ b/config/catalog/IFS/tco1279-orca025.yaml
@@ -19,3 +19,13 @@ sources:
     args:
       consolidated: False
       urlpath: reference::/work/bm1235/a270046/cycle2-sync/tco1279-orca025/nemo_deep/ICMUAc2/json.dir/atm3d.json
+  lra-r100-day:
+    driver: netcdf
+    args:
+      urlpath: '/work/bb1153/b382076/LRA/tco1279-orca025/r100/day/*.nc'
+      chunks: {}
+  lra-r100-mon:
+    driver: netcdf
+    args:
+      urlpath: '/work/bb1153/b382076/LRA/tco1279-orca025/r100/mon/*.nc'
+      chunks: {}
