--- a/config/fixes.yaml
+++ b/config/fixes.yaml
@@ -11,7 +11,7 @@ defaults:
 models:
     IFS:
         default:
-            deltat: 10800
+            deltat: 3600
             vars:
                 2t: 
                     short_name: tas
@@ -20,6 +20,15 @@ models:
                     short_name: pr
                     units: "{mass_flux}"
 
+                evspsbl:
+                    short_name: evap
+                    src_units: m
+                    units: "{mass_flux}"
+
+            data_model: cf2aqua
+
+    ICON:
+        default:
             data_model: cf2aqua
 
     FESOM:
@@ -61,7 +70,7 @@ models:
     CERES:
         syn-toa41:
             derived:
-                mtntrf:
+                    :
                     # the fixer cannot parse * followed by - for now
                     formula: 0.-toa_lw_all_daily*1.0060667743 
                     attributes:
